# ai-governance-platform

./: .gitignore  ARCHITECTURE.md  AUDIT.md  EXAMPLES.md  HITL.md  LOGGING.md  Makefile  NEXT_STEPS.md  README.md  main.py  pyproject.toml  requirements.txt
architectural-decision-records/: adr-001-policy-outcome-model-design.md  adr-002-sync-vs-async-communication.md  adr-003-modular-monolith-to-microservices-strategy.md  adr-005-pluggable-policy-module-architecture.md  adr-006-agent-workflow-support.md
audit/: __init__.py  db.py  models.py  repository.py  service.py
common/: __init__.py  logging.py
config/: default.yaml  local_test.yaml  ollama.yaml
gateway/: __init__.py  api.py  hitl_api.py  models.py  orchestrator.py
gateway_tests/: basic_test.json  basic_test.md  basic_text_with_model.md  blocked_test.md  redacted_test.md
hitl/: __init__.py  models.py  repository.py  service.py
migrations/: 001_create_audit_events_table.sql  002_create_hitl_reviews_table.sql  README.md
model_router/: __init__.py  config.py  exceptions.py  models.py  providers.py  router.py
policies/: __init__.py  example_policy.py  test_escalate_policy.py
policies/finance/: __init__.py  mnpi.py  pii_detection.py
policies/healthcare/: __init__.py
policy_engine/: __init__.py  config_loader.py  engine.py  interfaces.py  models.py  registry.py
tests/: test_config_loader.py  test_model_router_config.py  test_model_router_models.py  test_policy_engine.py  test_policy_models.py  test_policy_registry.py
